WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278102
[IFC][Invalidation] Overlapping text when mutating inline-block content
https://bugs.webkit.org/show_bug.cgi?id=278102
Summary
[IFC][Invalidation] Overlapping text when mutating inline-block content
alan
Reported
2024-08-14 08:23:09 PDT
Created
attachment 472155
[details]
Test case see test reduction.
Attachments
Test case
(281 bytes, text/html)
2024-08-14 08:23 PDT
,
alan
no flags
Details
Patch
(8.11 KB, patch)
2024-08-15 07:26 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(8.09 KB, patch)
2024-08-15 08:57 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-14 08:23:26 PDT
<
rdar://problem/133843355
>
alan
Comment 2
2024-08-15 07:26:44 PDT
Created
attachment 472175
[details]
Patch
alan
Comment 3
2024-08-15 08:57:50 PDT
Created
attachment 472176
[details]
[fast-cq]Patch
EWS
Comment 4
2024-08-15 10:44:09 PDT
Committed
282296@main
(d7c47c0f80c4): <
https://commits.webkit.org/282296@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 472176
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug